--- a/MauiApp1/Views/Equipo.xaml
+++ b/MauiApp1/Views/Equipo.xaml
@@ -3,10 +3,41 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp1.Views.Equipo"
              Title="Equipo">
-    <VerticalStackLayout>
+    <VerticalStackLayout
+        x:Name="InfoTeamLayout"
+        Margin="25"
+        Padding="30,30,30,30">
+
         <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             x:Name="creaLbl"
+             Text="Crea un torneo"
+             FontSize="18"
+             TextColor="#D466A3"
+             VerticalOptions="Center" 
+             HorizontalOptions="Center"
+             HeightRequest="50"/>
+        <Button
+             x:Name="CrearBtn"
+             Text="Crear Equipo"
+             HorizontalOptions="Center"
+             HeightRequest="40"/>   
+
+        <HorizontalStackLayout Padding="20" Margin="30">
+            <Label
+              x:Name="team1Lbl"
+              Text="Equipo 1"
+              FontSize="14"
+              FontAttributes="Bold"
+              TextColor="#D466A3"
+              HorizontalOptions="Start"
+              Margin="10,0,10,10"
+             />
+            <Button
+             x:Name="infoBtn"
+             Text="Info"
+             FontSize="10"
+             HorizontalOptions="End"/>
+
+        </HorizontalStackLayout>
     </VerticalStackLayout>
 </ContentPage>
