--- a/MauiApp1/Views/Torneo.xaml
+++ b/MauiApp1/Views/Torneo.xaml
@@ -2,11 +2,45 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp1.Views.Torneo"
+             xmlns:MyCode="clr-namespace:MauiApp1.Views"
              Title="Torneo">
-    <VerticalStackLayout>
+    <VerticalStackLayout
+        x:Name="TorneoLayout"
+        Margin="25"
+        Padding="30,30,30,30">
+        
         <Label 
-            Text="Welcome to .NET MAUI!"
+            x:Name="creaLbl"
+            Text="Crea un torneo"
+            FontSize="{MyCode:GlobalFontSize}"
+            TextColor="#D466A3"
             VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+            HorizontalOptions="Center"
+            HeightRequest="50"/>
+        <Button
+            x:Name="CrearBtn"
+            Text="Crear Torneo"
+            HorizontalOptions="Center"
+            HeightRequest="40"/>
+
+        <HorizontalStackLayout Padding="20" Margin="30">
+            <Label
+                 x:Name="team1Lbl"
+                 Text="Torneo 1"
+                 FontSize="14"
+                 FontAttributes="Bold"
+                 TextColor="#D466A3"
+                 HorizontalOptions="Start"
+                 Margin="10,0,10,10"
+                />
+            <Button
+                x:Name="enfrentamientoBtn"
+                Text="Enfrentamientos"
+                FontSize="10"
+                HorizontalOptions="End"/>
+
+        </HorizontalStackLayout>
+
+       
     </VerticalStackLayout>
 </ContentPage>
