--- a/MauiApp1/Resources/Styles/Colors.xaml
+++ b/MauiApp1/Resources/Styles/Colors.xaml
@@ -11,12 +11,12 @@
     <Color x:Key="PrimaryDarkText">#242424</Color>
     <Color x:Key="Secondary">#DFD8F7</Color>
     <Color x:Key="SecondaryDarkText">#9880e5</Color>
-    <Color x:Key="Tertiary">#2B0B98</Color>
+    <Color x:Key="Tertiary">#D466A3</Color>
 
     <Color x:Key="White">White</Color>
-    <Color x:Key="Black">Black</Color>
-    <Color x:Key="Magenta">#D600AA</Color>
-    <Color x:Key="MidnightBlue">#190649</Color>
+    <Color x:Key="Black">White</Color>
+    <Color x:Key="Magenta">#D466A3</Color>
+    <Color x:Key="MidnightBlue">#273169</Color>
     <Color x:Key="OffBlack">#1f1f1f</Color>
 
     <Color x:Key="Gray100">#E1E1E1</Color>
